--- a/shared/commerce/sales/セールス.md
+++ b/shared/commerce/sales/セールス.md
@@ -51,3 +51,6 @@
 利害関係のある人が直接売り込むより、誰か、できれば相手の身近な人を挟んで間接的に説得した方がうまくいきやすい。
 
 契約が取れなかった相手に逃げられる狩猟型のセールスと、契約が取れなかった相手でも親交を続けて別の仕事を紹介してもらえるような農耕型のセールス。
+
+松竹梅の商品があったら最終的に竹を売るものであって、松を売るものだと思っているとうまくいかない。普通、松竹梅とあるのは竹を買わせるため。
+もちろん松を買ってくれたら一番いいけど、第一の目標ではない。松と梅をうまく比較に使って、竹を売る。
