--- a/shared/feeling/センス.md
+++ b/shared/feeling/センス.md
@@ -1,3 +1,5 @@
+感覚。
+
 センスは磨くもの。
 生来のものもあるが、磨ける。
 
@@ -24,3 +26,7 @@
 センスは磨ける。
 
 学習や練習によって、知覚できなかったものも知覚できるようになる。分別を養う。
+
+感覚、センス、感じ方によって、どう感じたかが決まる。印象が決まる。
+
+結局、誰かに与える印象は相手のセンスに依存する部分もある。人間同士で似た部分もあるが、違う部分もある。
