--- a/shared/human/body/muscle/training/exercises/腕立て伏せ.md
+++ b/shared/human/body/muscle/training/exercises/腕立て伏せ.md
@@ -69,3 +69,5 @@ https://youtube.com/shorts/aT50_SS68sU?si=wmzwM8P4DBMwjV2O
 10回もできなかったら負荷を下げる。膝をつくとか。
 連続回数はとりあえず10回を目指して、慣れたらさらに30回を目指す。
 さらに負荷を上げる工夫をするのは普通のプッシュアップが連続30回を超えてからでいい。
+
+腕立て伏せすると文字書いたりキーボード叩いたりするのに腕が震えることがある。仕事の前とかは避ける。
