--- a/shared/achievement/problem/問題を深掘りする.md
+++ b/shared/achievement/problem/問題を深掘りする.md
@@ -1,12 +1,14 @@
 問題を知るということは、まず状況を知るということ。
 
-- 事象
+- 事象、症状
+  - どのような形で現れるか
   - どれくらいの頻度で現れるか
 - 原因
 - 問題
   - どんな弊害があるか
 - 対策
-  - 逃げられないか
   - 現時点ではどのような対策をしているか
+  - 回避: 逃げられないか
 - 効果
   - 現時点の対策では何が足りていないか
+  - どんな副作用があるか
