--- a/shared/data/science/データの集め方.md
+++ b/shared/data/science/データの集め方.md
@@ -1,5 +1,8 @@
 # データの集め方
 
+- 誰かが集めたデータをもらう
+- 自分で計測する
+
 データを集めるには、すでにあるものを調査して使うのと、自力で記録して使うのとがある。
 
 自力で集めるなら規模が課題。大きな会社なら多くのデータを集めやすいけど、規模が小さいと根本的に足りないこともある。
@@ -7,3 +10,12 @@
 browser-useを使うと、生成AIへのプロンプトでブラウザの操作を指示できる。
 
 スクレイピングの前に、意思決定のための情報収集を考えないといけない。
+
+データを得るためには何かを計測しないといけない。
+あるか、ないか。
+どれくらいの量か。
+どれくらいの数か。
+どれくらいの大きさか。
+
+形のように複雑なデータは扱うのも難しい。
+たとえばトポロジーみたいに「穴の数」だけで抽象化するとか、工夫が必要。データを得るだけなら見るだけとか写真を撮るだけでもいいけど、使うことを考えると複雑すぎる。
