--- a/shared/feeling/image/想像.md
+++ b/shared/feeling/image/想像.md
@@ -4,3 +4,18 @@
 
 具体的なイメージや状況を思い描く。
 思考よりは直感的。
+
+外から見てわかることとわからないことがある。
+
+わからないはずのことまでわかった気になるのは想像のおかげ。
+見えないことを見る。
+
+おじさんの自転車を走って追いかける男の子を見て親子だと感じる。ここで「親子」はまだわからない。事実とは限らない。
+推定、推測、予測、予想、主観、印象、想像。
+なんならおじさんじゃなくて老け顔のお姉さんかもしれないし、女の子かもしれないし。それも顔や服装から推測している。想像でしかない。
+
+全ては想像。
+どうしても想像が入る。ある程度抽象化したまま見ていることが多い。そのほうがたぶん処理が軽くて楽だから。人間はめんどくさがりだから。
+
+あとは「大きい」みたいな印象は比較。
+比較した場合、比較対象はなんなのか。どれくらい差があるのか。実はそんなに差がないかもしれない。
