--- a/shared/feeling/感じ方.md
+++ b/shared/feeling/感じ方.md
@@ -30,3 +30,9 @@ https://youtu.be/Ub5CTXX24RM?si=yCoq02EHU9_K8gnl
 なんで興味を引いたのか。
 
 自分が受ける印象の要素がわかれば、それを模すことで似た感覚の他人に特定の印象を与えることもできる。
+
+人によっては同じものを見ても違う感じ方があるし、もっというと同じ感じ方でも違う過程でそう感じている可能性もある。違う要素を見ている。
+
+何かを感じたとき、いきなり印象を持ちがち。
+はしゃいでる人を見たら「元気だなぁ」とか。
+印象には元となったなんらかの事象があるので、「なんでそう感じたか」を逆に辿ると自分の感じ方の癖を知れる。
