--- a/shared/health/medicine/tips/咳を止める.md
+++ b/shared/health/medicine/tips/咳を止める.md
@@ -1,13 +1,34 @@
+## 咳の症状の違い
+
+- 痰が出る
+  - 痰の色（透明、白、黄、緑、赤）
+- 鼻水が出る
+- 咳の激しさ
+
+## 咳の原因の違い
+
+- 喉や声帯の炎症
+- 気管支炎
+- 食道炎
+- 肺炎
+- など
+
+## いつ病院にかかるべきか
+
+咳が治らない基準は3週間くらい。
+1週間くらいなら続くのは良くあることなので、咳止めを飲んだりして対症療法でいい。
+3週間を過ぎたら一度病院で診てもらった方がいい。
+
+## 対策
+
 市販の咳止めは基本効かない。
 はちみつかシロップでも舐めてた方がマシ。
 
+はちみつはとろみで喉を保護するだけでなく、咳止めの成分も含まれている。
+
 こまめに喉を潤してると咳が出ない。水筒とかあると便利かも。
 
-気管支の炎症のタイプの咳は、そもそも喉に異物感がずっとあって咳止めが効きにくい。
+気管支炎タイプの咳は、そもそも喉に異物感がずっとあって咳止めが効きにくい。
 
-咳の違い
-
-- 痰が出る
-- 鼻水が出る
-
-咳が治らない基準は3週間くらい。1週間くらいなら続くのは良くあることなので、咳止めを飲んだりして対症療法でいい。
+喉や食道以外の原因の咳にはのど飴が効きづらい。
+のど飴を舐めてもすぐ咳が出るようなら、喉というより気管支炎の可能性がある。
