--- a/shared/influence/存在感.md
+++ b/shared/influence/存在感.md
@@ -17,3 +17,6 @@ careして欲しいなら目立ったほうがいいのかも。
 ただ、悪目立ちして人が離れていくこともある。
 
 眼力が強い人は存在感というか圧がある。
+
+存在感を高める一番簡単な方法は、体の動きを大きくすること。
+できれば体から音を出す。手を叩くとか。笑うのもいい。
