--- a/shared/music/theory/melody/音階.md
+++ b/shared/music/theory/melody/音階.md
@@ -1,5 +1,7 @@
 # Scale
 
+スケール。
+
 一定の規則に従って音を並べたもの。
 
 代表的な音階にメジャースケールとマイナースケールがある。
@@ -43,3 +45,6 @@ https://youtube.com/watch?v=f3G-FDFVwp8&si=jaQ5uV7RfuKnP51N
 
 全音5つ、半音2つの7音で一組になるスケールをダイアトニック（全音階）スケール、全音階を使ったコードをダイアトニックコードという。
 メジャースケールやマイナースケールも全音階の一種。
+
+スケールを視覚的に表したもの。12音を円にするとスケールは星型になっている。
+https://youtube.com/shorts/NngpnuJ5Ls0?si=Sbxe5mZN0tJaSZMD
