--- a/shared/music/theory/抑揚.md
+++ b/shared/music/theory/抑揚.md
@@ -36,6 +36,7 @@ https://gigazine.net/news/20211130-music-negative-superstimulus/
 
 - 緩急（テンポ）
 - 強弱（ストレス）
+  - アクセント
 - 高低（イントネーション）
 
 音の強さの変化。
@@ -61,3 +62,7 @@ https://gigazine.net/news/20211130-music-negative-superstimulus/
 - 滑舌が悪い
 
 抑揚がないのは単に肺活量が足りないことも考えられる。アクセントのところで強い息が出せてない。
+
+単なるピッチの高低、イントネーションはメロディーというよりリズムの問題。
+
+曲の強弱で言うと、アクセントを抑えるのも盛り下げる。下がった部分も必要。
