--- a/shared/perception/modeling/抽象化.md
+++ b/shared/perception/modeling/抽象化.md
@@ -18,3 +18,9 @@
 抽象化できないか？
 
 具体化できないか？
+
+抽象化するということは単純でもある。
+ただ、必要な複雑さが抜け落ちてしまうこともある。用途によって、情報に必要な抽象度は違う。
+決まった範囲の量の飴玉を決まったサイズの袋に詰める作業なら、個数か重さに抽象化すれば機械で詰められる。
+これは飴玉を規格化しているおかげでもあるし、袋という自由度が高い容器だからでもある。規格を揃えることで扱いやすくなる。条件を減らすことでも扱いやすくなる。
+サイズの決まってない曲がったきゅうりを木箱に詰めようとしたらもっと具体的な情報が必要。
