--- a/shared/perception/知覚.md
+++ b/shared/perception/知覚.md
@@ -42,3 +42,51 @@
 
 感覚的に捉えるか、あらかじめ知識として知っているか。
 「今は3時」は知識だけど、「時計の針は3時を指している」は感覚。五感を通した表現。
+
+何かを見ようとする場合、
+
+データ、パラメータに分解する。
+
+- 点（0次元）
+  - 有無
+  - 呼称
+  - 数
+    - 個数
+    - 回数
+  - 色
+    - 明暗
+    - 濃淡
+    - 色調
+    - 色彩
+- 線（1次元）
+  - 量
+    - 長さ
+    - 深さ
+    - 速さ
+    - 緩急
+    - 強弱
+    - 高低
+- 面（2次元）
+  - 広さ
+- 形（3次元）
+  - 大きさ
+    - 高さ
+    - 幅
+    - 奥行き
+  - 質感
+
+比較する。
+
+- 比、割合、比率
+
+部品、要素に分解する。
+
+- 人
+- 顔
+- 目
+- 鼻
+
+みたいな。
+さらにそれぞれのパラメータを見る。
+
+形とは輪郭と質感のこと。
