--- a/shared/rest/休息.md
+++ b/shared/rest/休息.md
@@ -83,3 +83,5 @@
 暇つぶしと違って、息抜きや休みは必要。肉体や精神を回復させる。パフォーマンスの文脈。
 
 rest, 休息がworkと関連するのもエネルギーを充填するとか、損耗を回復するとかの行為が力に繋がるため。
+
+休んでもやることがない、じゃなくて、何もしなくていいのが休みなのよ。
