--- a/shared/human/body/muscle/training/筋肉を大きくする.md
+++ b/shared/human/body/muscle/training/筋肉を大きくする.md
@@ -46,3 +46,7 @@ https://youtu.be/MQLp90Qv4gc?si=SUm-VgQyPcKkIlYw
 筋肉を鍛えるなら、筋トレというより単に筋肉に力を入れるだけでもいい。自重よりさらに負荷は低いけど。
 
 筋肉をつける前に体力をつける。少ない回数でもいいのでまずは全身の筋トレを続ける。腕立て20回、プランク30秒、スクワット20回、あたりから始める。
+
+大きいだけの筋肉は動くと邪魔になる。
+
+筋肉は重いので、体重が軽いことも長所になるスポーツでは育てる筋肉を選ばないといけない。
