--- a/shared/story/telling/物語のエクスタシー.md
+++ b/shared/story/telling/物語のエクスタシー.md
@@ -2,6 +2,9 @@
 
 恍惚、陶酔、絶頂。
 
+- 作者が描きたかったこと
+- 作者が読者に与えたかったこと
+
 エクスタシーが得られない物語はつまらない。
 読み手にとって「気持ちいい」瞬間が刺さる。
 
@@ -19,3 +22,6 @@
 ある種の恩恵。好きになるところ。
 
 エクスタシーを得るために、山場に向かって盛り上げていく。時には谷もある。
+
+売れる作品は、作者の利己的なエクスタシーが共感されるパターンと、作者が与えたかった恩恵が読者に刺さるパターンがある。
+どっちもなかったら物語というよりは歴史書に近い。物語には作者の意図がある。見せ場とでもいうべきか。
