--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -182,3 +182,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 無理に全ての人と付き合う必要はない。
 
 敬意、好意、謝意
+
+興味でなく関心を、好意でなく敬意を示すのが基本。
+ただ、親しくなりたいなら好意も示す。敬意が先。
