--- a/shared/thinking/lateral/連想.md
+++ b/shared/thinking/lateral/連想.md
@@ -57,3 +57,11 @@
 例えば、「カレー」だったら「黄色い」とか「茶色い」とか抽象的すぎる連想よりは、「美味しいカレー屋」とか、料理好きなら「好きなカレールーのメーカー」とか、定番の料理繋がりで「ラーメン」とか、インド料理で「ビリヤニ」とかの方が近い。
 
 会話とかの高速なやり取りが必要な場面では、抽象的な連想よりも具体的な連想が多く出てくる方が便利。
+
+論理的な思考というよりは、近くにあるものを持ってくる感覚。
+
+会話の楽しみの一つとして、自分からは出なかった連想が得られるという面もある。
+
+親は考えればわかるけど、子は知らないと出てこない。
+
+連想の方向は、クラスを辿る方向と、オブジェクトの事例を挙げる方向がある。
