--- a/shared/communication/frameworks/emotion/感動.md
+++ b/shared/communication/frameworks/emotion/感動.md
@@ -39,3 +39,6 @@ https://dentsu-ho.com/articles/5523
 機体が高くなるほど、感動させるのが難しくなる。
 
 感動させるには、卓越しなければならない。他人に理解できないレベルまで人類を超越する。圧倒的に優れる。
+
+感動を言葉にするのは野暮、という考え方もある。
+誰かに話すと安っぽくなる。
