--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -22,3 +22,7 @@
 
 恋愛は女子から追われるべきだけど、誘うのは男性であるべき。
 男性から追うのは格下みたいだし、長続きしないので良くない。
+
+誰にでも下心を出すのは良くない。基本は本命だけ。
+
+好きな「タイプ」というのは何人も付き合ってわかることなので、好きなタイプが定まっている人はチャラいと思った方がいい。
