--- a/shared/talk/つまらない話.md
+++ b/shared/talk/つまらない話.md
@@ -17,3 +17,5 @@ https://www.youtube.com/watch?v=OS5svE2jtyk
 怪談みたいに、聞き手がその場にいたかと思うくらい詳細な描写がまず基本。
 
 まぁ、世の中の人のほとんどはつまらない話しかしないから、あんま自分の話がつまらないとか気にしなくてもいい。
+
+つまらないのにだらだら喋ってるのが一番だるい。
