--- a/shared/intelligence/無知.md
+++ b/shared/intelligence/無知.md
@@ -19,3 +19,14 @@
 
 知らないことに気づくには、常識や偏見に気づくのが大事。
 たとえば「赤ちゃんの肌にも使える石鹸」と聞いたら、「赤ちゃんと大人の肌ってどっちが強いの？」と考える。「赤ちゃんは弱い」という偏見に気づく。
+
+わからないこと、疑問のパターンをよく知ることで、何を知らないかを知る。
+
+ignoranceは人が知らない。無知。
+unknownはそれが知られてない。未知。
+
+何を知らないか、を知ることで、知ろうとすることができる。
+何を知らないか、を知らないと、知ろうとすることもできない。
+たまたま知ることはあるけど、運任せになってしまう。
+
+知ろうとして知れないこともある。
