--- a/shared/thinking/lateral/関連.md
+++ b/shared/thinking/lateral/関連.md
@@ -1,9 +1,17 @@
-## 関連の例
+## 広さ
 
 - 親子関係
+- 主従関係（使用の関係）
+- 前後関係（時間軸）
+  - 順序
+  - 変化
+
+## 深さ
+
 - 概念
 - 事例
-- 感覚、印象
+- 印象
+- 意見
 - 知識
   - 原因
   - 付随する事象
@@ -13,6 +21,8 @@
   - 裏
   - 逆
   - 対偶
+- 機能
+- 構造
 
 ## 親子関係
 
@@ -35,3 +45,5 @@
 逆に『NARUTO』から「漫画作品」を連想することもできる。
 
 綺麗に関連を整理するなら、抽象概念を置いたりして親は一つに絞った方がいい。
+
+前後関係は兄弟関係の亜種としても表現される。
