--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -131,3 +131,5 @@ gameはworkと違って、何も変えないこともある。
 
 ゲームには目的やゴール、成功条件がある。
 ゲームには戦略がある。うまくやる、という概念がある。
+
+ゲームが上手い人はルールやゴールを理解するのが早くて、それに合った強い戦術や戦法を見つけるのが早い。長期間やるとゲームそのものの上手さより反射神経とかの肉体のスペックとかの影響が大きくなる。
