--- a/shared/music/tips/リズム感を鍛える.md
+++ b/shared/music/tips/リズム感を鍛える.md
@@ -132,3 +132,6 @@ BPM 60に慣れたら90, 120と増やしていく。
 声や楽器でもリズムを取る練習をする。手拍子とはまた違う。例えば声なら息継ぎが必要。
 
 スマホのメトロノームだと裏拍を鳴らせたりするけど、リズム練習のときは表拍だけ鳴らす。
+
+リズム練習
+https://youtube.com/shorts/b33i2gNrMno?si=ElbAQr9E1q49Th6K
