--- a/shared/lifestyle/appliances/加湿器の選び方.md
+++ b/shared/lifestyle/appliances/加湿器の選び方.md
@@ -49,3 +49,6 @@ Switch Bot の電源タップみたいにタイマーを別でつけられるな
 
 超音波式にヒーターがついたハイブリッド式もある。
 ヒーターを使うと、加湿量が増えたり、水が腐りにくくなったりする利点がある。
+
+超音波式の加湿器は水蒸気の吹き出しが弱いので、低い位置に置くと床が濡れてしまうこともある。
+高い位置に置くか、サーキュレーターで空気を動かすのがベター。
