--- a/shared/decision/気力.md
+++ b/shared/decision/気力.md
@@ -2,6 +2,7 @@
 
 - 行動力
 - 注意力
+- 判断力
 
 意思決定する、行動するための仮想的な力を気力という。
 
@@ -32,4 +33,6 @@
 
 気力を損なうと、ミスが増えたり、手を抜いたりする。
 
-気力は酸素と糖分でできている。
+気力は睡眠と酸素と糖分でできている。
+
+気力は有限。節約しよう。
