--- a/shared/lifestyle/meal/tips/冷蔵庫の使い方.md
+++ b/shared/lifestyle/meal/tips/冷蔵庫の使い方.md
@@ -2,3 +2,5 @@
 冷蔵庫の扉のスペースには痛みにくいものを入れる。缶とか中華調味料とかわさびチューブとか。
 
 冷蔵室は余熱を取った保存食のために一段空けておくくらいでちょうどいい。パンパンに詰めると冷えにくくなる。
+
+冷蔵庫にホワイトボードとか付箋とかつけて賞味期限を管理するといちいち中を見て考えなくていいので判断を減らせる。判断力は有限。節約しよう。
