--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -2,36 +2,43 @@
 
 関心を示すためには、自分の時間を相手のために使う。
 
-相手の話に興味がないということは、相手に興味がないということ。
-
 ## Good
 
-- 目を合わせる
 - 目を離さない
-- 名前を呼ぶ
-- ノリ、テンションを合わせる
-- 話を聞く
-- 話を覚えている
+- 目を合わせる
 - 微笑みかける
-- 相槌を打つ
-- 大げさにリアクションする
-- 話を遮らない
-- 話の続きを促す
-  - 詳しく教えてもらう
-  - 詳しく質問する
-  - 話をまとめない
-- 話の重要な部分で大きく反応する
-- 体ごと相手に向ける
+- 相手の話を聞いている姿勢を示す
+  - 相槌を打つ
+  - 話を遮らない
+    - 質問して話を誘導しない（言いたいことがわからない時は質問していい）
+  - 話の続きを促す
+    - 詳しく教えてもらう
+    - 詳しく質問する
+    - 話をまとめない
+  - 話の重要な部分で大きく反応する
+  - 体ごと相手に向ける
+  - ノリ、テンションを合わせる
+  - 相手の表情と合わせる
+- 相手を理解しようとする
+  - 意味がわからなかったことを質問する
+- 相手を理解して、予測する
+  - 相手の言動を先回りする
+- 相手のことを覚えようとする
+  - 相手のおすすめをメモする、その場で調べる
+  - 相手のおすすめを使って感想を話す
+- 相手のことを覚えている
+  - 名前を呼ぶ
+  - 真似する
+  - ちょっとした変化に気づく
+    - 前に会った時と変わったところを指摘する
+      - 髪型や服装の変化に気づいて指摘する
+    - 一時的に変わったところを指摘する
+      - 気分や体調の変化に気づいて指摘する
+      - 感情の動きを察する
+      - 疲れに気づいて指摘する
 - 相手を観察して、思ったことを伝える
-- 変化に気づく
-  - 相手の言動を覚えておく
-  - 前に会った時と変わったところを指摘する
-- 質問して話を誘導しない（言いたいことがわからない時は質問していい）
-- わからないまま終わらせない
-- 相手を模倣する
-- 相手の表情と合わせる
-- 疲れを察する
-- 相手の感情の動きを察する
+- 丁寧に扱う
+- 面倒を見る、世話をする
 
 ## Bad
 
@@ -97,3 +104,6 @@
 相手を見て気付いたことを伝える。
 
 関心を示すのは好意ではなく敬意。相手を大切にする。好き嫌いは関係ない。
+
+相手の言動を覚えておくのは、興味よりも関心。
+覚えておくことで、理解して、予測できる。
