--- a/shared/thinking/問いに答える前に.md
+++ b/shared/thinking/問いに答える前に.md
@@ -5,3 +5,5 @@
 誰かと話すときも、中途半端な質問だといまいち答えにくい。
 反射的に答えるのではなくて、まずは質問を補ってあげるといい。
 具体的で、相手が本当に知りたい質問を協力して見つける。
+
+誰かと話すときは、相手の質問についてわからなかったことをまず問い返したり、少し考えるような間を置いて答えると、より誠実に、しっかり考えて答えていることを示せる。
