--- a/shared/human/body/muscle/training/tips/筋肉を大きくする.md
+++ b/shared/human/body/muscle/training/tips/筋肉を大きくする.md
@@ -50,3 +50,5 @@ https://youtu.be/MQLp90Qv4gc?si=SUm-VgQyPcKkIlYw
 大きいだけの筋肉は動くと邪魔になる。
 
 筋肉は重いので、体重が軽いことも長所になるスポーツでは育てる筋肉を選ばないといけない。
+
+筋肉をつけるのと、筋肉を大きくするのは違う。
