--- a/shared/thinking/問いの例.md
+++ b/shared/thinking/問いの例.md
@@ -1,28 +1,33 @@
+- あるか
+- ありうるか
+- するか
+- できるか
+- したいか
 - 何があったか
 - 何をしたか
 - 誰が
 - 誰と
 - いつ
-- いつから
-- いつまで
+- いつから、いつまで
 - どこで
 - どこに
-- どこから
-- どこまで
 - どんな
 - どうして
-  - そうした
-  - そうなった
   - どう感じて
-    - どんな印象か
-    - どんな感情か
-    - どんな意味があるか
-    - どんな価値があるか
+    - どんな印象で
+    - どんな感情で
   - どう考えて
+    - 何があって
     - 何を見て
-      - どんなきっかけがあるか
-      - 決め手は何か
+      - どんなきっかけで
+      - 何が決め手で
+    - 何が嬉しくて
+      - どんな意味があって
+      - どんな恩恵があって
+    - 何が嫌で
 - どうやって
+  - どんな仕組みで
+- どこから、どこまで
 - どれくらい
   - いくら
   - いくつ
