--- a/shared/sex/dating/tips/恋人を選ぶ.md
+++ b/shared/sex/dating/tips/恋人を選ぶ.md
@@ -1,2 +1,9 @@
 恋人を選ぶときに、相手が疲れているときの態度を知っておくのは大事。
 同棲でもいいけど、3泊とか長めの旅行に行くのもいい。
+
+恋人に気を遣わないといけないと家族になった時にしんどい。友人のように気を抜ける相手の方が幸せになりやすい。
+
+恋人を選ぶならさっさと選ぶべきで、ずっとキープするのは不誠実。
+
+選り好みするなら、婚期を逃す覚悟も必要。最終的に一人で生きて一人で死ぬ覚悟を持って選ぶ。
+もっというと選ばれない覚悟を持つ。選り好みしない方が選ばれるための母数が多い。
