--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -37,6 +37,8 @@
       - 感情の動きを察する
       - 疲れに気づいて指摘する
 - 相手を観察して、思ったことを伝える
+  - 褒める
+  - 意外だと思ったことを伝える
 - 丁寧に扱う
 - 面倒を見る、世話をする
 
@@ -107,3 +109,11 @@
 
 相手の言動を覚えておくのは、興味よりも関心。
 覚えておくことで、理解して、予測できる。
+
+店員さんとか、知り合いじゃなくてもお礼を言うときは目を合わせると伝わりやすい。
+
+誰でも褒められるようなことは伝えてもあまり関心が伝わらない。
+
+内面と外見をセットで褒めると説得しやすい。
+
+後出しで褒めるとお世辞だと思われやすいので、「俺も前から思ってたんだけど」とか前置きをつけると説得しやすい。
