--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -145,3 +145,8 @@
 愛がなくても形式を徹底することで気遣いすることもできる。でも人に合わせるとなおいい。
 
 気遣いっていう行為そのものが介護。
+
+自分はしなくても困らないけど、相手にはしたほうが気持ちいいことをする。
+
+気遣いは、優しいとは限らない。
+病院の食事管理みたいな、厳しい気遣いもある。
