--- a/shared/care/面倒を見る.md
+++ b/shared/care/面倒を見る.md
@@ -33,3 +33,8 @@
 面倒を見るために何を知ればいいか。
 
 まぁ、介護だ。
+
+「パパ」として欲しいものを買ってあげるのも世話ではある。普通は重いけど、相手が何も考えてないなら他人でも成立することがある。何も返さなくて恨まれることもある。
+
+面倒を見たことに対して何も返してもらえないと恨む人もいる。
+普通は、そうなる前に面倒を見るのをやめるべき。
