--- a/shared/choice/value/価値.md
+++ b/shared/choice/value/価値.md
@@ -277,3 +277,5 @@ Not for you.
 - 期待: 将来の需要と供給
 
 「雑に扱っていい」ことに価値が生まれることもある。男性とか、プラスチック容器とか。でも価格が上がるわけではない。基本的には「供給が多い」ということでもある。
+
+より多くの人に恩恵があると需要が増えやすい。
