--- a/shared/game/優劣.md
+++ b/shared/game/優劣.md
@@ -20,3 +20,10 @@
 
 マウントって結局なんだろう？上下とか優劣で人を扱うこと？ボスのように振る舞うこと？優位に立とうとする？勝とうとする？
 優位というのは、優れているというよりも、勝とうとする感じ。戦おうとしている。
+
+- 衝動的
+  - 品性がない
+  - 計画性がない
+- 余裕がない
+- 勉強ができない
+- 仕事ができない
