--- a/shared/human/being/well/自己肯定感.md
+++ b/shared/human/being/well/自己肯定感.md
@@ -27,3 +27,6 @@ Love の文脈。
 意味がなくても肯定していい。愛していい。
 
 自分の判断を肯定するには、納得が必要。自分なりの根拠を持つ。説明できるようにする。
+
+「自分は愛されている」と思うのは自己肯定感ではない。
+「誰も自分を愛さなくても自分は自分を愛しているからそれで十分」と思うのが自己肯定感。他人に期待しすぎない。
