--- a/shared/intimacy/tips/親近感を与える.md
+++ b/shared/intimacy/tips/親近感を与える.md
@@ -15,3 +15,5 @@
 - 同じ絵文字やスタンプを使う
 
 共通点を見つけた上で「これだけ共通点があったら他にもあるかもね」みたいに共通点を強調するのもいい。
+
+共通点はとにかく細かすぎるところまで深掘りして、何度も話題に出す。会話を続けるきっかけにもなるので二重に信頼されやすくなる。
