--- a/shared/popular/tips/男性にモテたい.md
+++ b/shared/popular/tips/男性にモテたい.md
@@ -7,3 +7,9 @@
 「女には穴があるから、どんな女にも彼氏はできるので、彼氏がいること自体は「モテ」を担保しない。」（@Cryptobanker_Z）
 
 男はいわゆる女って嫌い。考えなしで、恋愛脳で、他人を評価して、人によって態度が違う。
+
+男性側として、女性を「異性として意識しない」ということはあまりない。
+そもそも男性の方が単純に恋愛対象が広い。
+それでもなお選ばれないくらい魅力がないか、親しい男性が下心を見せないタイプか、どっちか。
+
+男はだいたい自分のことを好きな子なんてみんな好きだ。
