--- a/shared/art/作品.md
+++ b/shared/art/作品.md
@@ -33,3 +33,8 @@
 
 作曲に限らず、何かを作る時はできるだけ早く完成した状態に持っていって、そこから洗練していくのがベスト。
 ものによってはそれが難しい場合もある。建物など、製造コストが高いものはもっと小さなサンプルを作って設計を進めていく場合もある。
+
+漫画作品を語る、
+アニメ作品を語る、
+あるいは語るというより細かく要素を分解するというべきか。
+アニメ作品の要素とか。語る時と見る時で基本的に同じ。語るためにはそれを見ないといけない。
