--- a/shared/collaboration/organization/hierarchy/ボス.md
+++ b/shared/collaboration/organization/hierarchy/ボス.md
@@ -1,4 +1,6 @@
-# ボス
+# Boss
+
+実力者。
 
 組織にただのボスは要らない。
 
@@ -16,3 +18,6 @@
 ボスについていくのではなく、引き摺り下ろして下克上を目指すべき。
 
 職場に利益を食うだけのボスは要らない。
+
+実力がないボスは淘汰される。
+下ブレた時に追い落とされる。稀に上ブレ続けて生き残ることもある。
