--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -1,3 +1,7 @@
+- 自分から近づく
+- 相手から近づいてくる
+  - 相手を誘う
+
 ## 親しくなるまでの過程
 
 親しくなるには近づかないといけない。
@@ -265,3 +269,6 @@ https://www.total-marriage.com/column/1644/
 親しくなる前に、まず好かれること。
 
 異性とばかり親しくなろうとするのは怪しい。作為的に感じる。
+
+一方的に距離を詰めるのは引かれたり逃げられたりする場合もある。
+ただ、相手から誘うのが苦手で、距離を詰めてもらった方が助かる人もいる。
