--- a/shared/intimacy/距離感.md
+++ b/shared/intimacy/距離感.md
@@ -69,3 +69,5 @@
 元々距離感が近い人でも、好かれないと近付いてこない。
 
 距離感はまず遠い方がまだ良くて、いきなり近づきすぎると警戒される。でも親しくなるには、ギリギリまで近づくのが大事。近づいた上で害がないことを示さないといけない。
+
+年を取ったら年下への距離感も見直さないといけない。近すぎると怖い。
