--- a/shared/life/生.md
+++ b/shared/life/生.md
@@ -152,3 +152,10 @@ https://www.youtube.com/shorts/Tieiz38zcIA
 自分という器を機能させるためにエネルギーを集める。
 
 「人間は刺激を得るために生きている」と言った人もいるみたい。出典は忘れた。
+
+死んで何かを遺すのも別に必要な活動ではない。子ども以外は生殖の真似事でしかない。
+
+どう生きるか。
+どんな目に遭うか。
+どんな傷を抱えて生きるか。
+どんな生活を送るか。
