--- a/shared/sleep/睡眠のコツ.md
+++ b/shared/sleep/睡眠のコツ.md
@@ -16,3 +16,9 @@
 12. 眠れないままずっと布団の中にいない
 
 [WHY WE SLEEP](https://www.amazon.co.jp/dp/B07D3N4NQM)
+
+## その他
+
+寝る前はとにかく刺激を減らして副交感神経を優位にするのが大事。
+
+起きたらとにかく刺激を増やして交感神経を優位にするのが大事。
