--- a/shared/care/attention/tips/関心を示す.md
+++ b/shared/care/attention/tips/関心を示す.md
@@ -117,3 +117,7 @@
 内面と外見をセットで褒めると説得しやすい。
 
 後出しで褒めるとお世辞だと思われやすいので、「俺も前から思ってたんだけど」とか前置きをつけると説得しやすい。
+
+歩いている時も相手をよく見る。まぁ、転ばない程度に。
+
+「どうせもう関わらないから、雑でいい」って判断もわかる。
