--- a/shared/documentation/知識の継承.md
+++ b/shared/documentation/知識の継承.md
@@ -45,3 +45,7 @@
 とにかく知識を残すのが documentation で、コミュニケーションになるとは限らない。
 
 抜け漏れなく知識を伝えるためには、前提となる知識も明確に知っておかないといけない。
+
+先達へのリスペクトがないと知識が正常に継承されないことがある。
+
+先達へのリスペクトがあれば継承できるが、なければ簒奪するしかない。
