--- a/shared/human/body/muscle/training/exercises/腕立て伏せ.md
+++ b/shared/human/body/muscle/training/exercises/腕立て伏せ.md
@@ -1,5 +1,9 @@
 # Push-up
 
+腕立て伏せ。プッシュアップ。
+
+腕や胸筋に効果がある。
+
 ## 負荷を調整する
 
 1. 負荷なし（立ったままフォームのみ）
@@ -10,29 +14,32 @@
 腕立て伏せは負荷なし、立ったまま腕立て伏せのフォームで腕を前後させるだけのやり方もある。ほとんど鍛えられないけど、最低限というか、全く鍛えてない人はここから始めてもいい。
 負荷ゼロから、腰まで地面につけるパターン、膝まで地面につけるパターン、つま先だけつける通常のパターン、と負荷を調整しやすいのも腕立て伏せの良いところ。
 
-## やり方
+## フォームのポイント
+
+基本的には大胸筋を伸ばすのが大事。
+
+- 手は肩幅より少し外
+- 手は胸を床につけたとき指先が肩にくる位置
+- 中指はまっすぐ前に向ける
+- 脇を締めて、肘を60度以上開かない
+- 肩甲骨で腕を背中側に引いて、胸を押し出す
+- 首を伸ばして肩を下げる
+- 頭から尻までまっすぐにする
+
+手のひらの下にブロックなどを置いて、肩の位置を上げることで胸を押し出すスペースをさらに広げる方法もある。
 
 腕立ては腕が 60 度以上外に向いていると肩を痛めやすくなる。
 
 腕立てはゆっくりしたほうが効くし、関節を痛めにくい。
 
-正しいやり方のポイント:
+よくある失敗:
 
-1. 手は肩よりも少し外に置く
-2. 手は胸を床に着けた時に肩の少し下に来るように置く
-3. 中指をまっすぐ正面に向ける
-4. 脇を締め、肩甲骨を寄せながら下げる
-5. 頭から尻まで体をまっすぐに維持する
-
-[腕立て伏せでよくある間違い 7 つ｜正しいフォームについて解説！ - YouTube](https://youtube.com/watch?v=NS4Rta4mFWQ&si=UuAu8nVGqpu8fLCL)
-
-よくある間違い:
-
+- 肩甲骨を使えていない
+- 肩がすくんでいる
 - 肘を横に開いている
 - 左右対称になっていない
 - 尻が下がって、背中が反っている
 - 尻が上がって、背中が丸まっている
-- 肩甲骨をうまく使えていない
 - 上下の可動域が狭い
 - 頭が下がっている
 
@@ -71,3 +78,7 @@ https://youtube.com/shorts/aT50_SS68sU?si=wmzwM8P4DBMwjV2O
 さらに負荷を上げる工夫をするのは普通のプッシュアップが連続30回を超えてからでいい。
 
 腕立て伏せすると文字書いたりキーボード叩いたりするのに腕が震えることがある。仕事の前とかは避ける。
+
+https://youtube.com/shorts/32-6rSXj73w?si=nFSwcSQKf3U-KdXM
+
+[腕立て伏せでよくある間違い 7 つ｜正しいフォームについて解説！ - YouTube](https://youtube.com/watch?v=NS4Rta4mFWQ&si=UuAu8nVGqpu8fLCL)
