--- a/shared/people/人との相性.md
+++ b/shared/people/人との相性.md
@@ -7,3 +7,14 @@
 - 怒るタイミングが合う
 - テンポ、リズムが合う
 - ノリ、テンションが合う
+
+## その他
+
+人間のタイプと相性
+
+- 綺麗で排他的（エリート）
+- 綺麗で擦れてない（挫折を知らないけど偏見がない）
+- 絶望したロマンチスト（挫折したけど前を向いている）
+- 絶望してひねくれた昆布
+
+https://youtu.be/W3kQ0kpidOI?si=t9tP7HYAMXdphzKQ
