--- a/shared/game/theory/駆け引き.md
+++ b/shared/game/theory/駆け引き.md
@@ -1,4 +1,6 @@
-駆け引き、読み合い。
+# Tactics
+
+戦術。駆け引き。読み合い。
 
 相手の出方や状況に応じて、自分に有利になるように事を運ぶこと。
 
@@ -28,3 +30,6 @@
 手を選ぶ前に狙いがある。狙いと手が合ってないとリソースが無駄になりやすい。
 
 駆け引きには読み合いも含むけど、その前に情勢の把握と、攻めと守りの切り替え。機会を伺うこと。
+
+誰かの人生はゲームの景品じゃない。
+日常生活でわざわざ駆け引きしたくない。
