--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -133,3 +133,6 @@ gameはworkと違って、何も変えないこともある。
 ゲームには戦略がある。うまくやる、という概念がある。
 
 ゲームが上手い人はルールやゴールを理解するのが早くて、それに合った強い戦術や戦法を見つけるのが早い。長期間やるとゲームそのものの上手さより反射神経とかの肉体のスペックとかの影響が大きくなる。
+
+ゲームの特徴は、「利得を最大化する」こと。
+対戦ゲームでも協力ゲームでも同じ。
