--- a/shared/community/価値観の違い.md
+++ b/shared/community/価値観の違い.md
@@ -15,3 +15,5 @@ Win Win の関係の中でもさらにビジネスとコミュニティに分か
 
 昔の「家」では父親がルールだった。
 しかし、今はそういう時代でもないので、家族になる前にルールを決める必要がある。
+
+不安を感じる要素が違いすぎると変に不安を与えてしまったりする。鈍すぎると。逆に鋭すぎる分には自分が不安を感じる。
