--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -50,3 +50,9 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 マインドマップ的な広さと深さのある構造と、その変化をモデリングするのが基本。
 
 理、筋道を解する。
+
+理解するとは、知るだけじゃなくて、予測できるようになること。
+
+相手を知るだけじゃなくて、理解するとはどういうことか。
+
+完全に理解することをつまらないと思っている節もある。
