--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -185,3 +185,12 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 興味でなく関心を、好意でなく敬意を示すのが基本。
 ただ、親しくなりたいなら好意も示す。敬意が先。
+
+男は社交を重視するので、ある程度誰とも社交的に話そうとする。天気の話でもまぁいい。
+
+目の前の人と全く話そうとしない
+目の前で携帯を長々と触る
+人によって大きく態度を変える
+自分の話ばっかりする
+
+みたいなのは社交ができないから獣として扱われる。
