--- a/shared/game/competitive/優位性を誇示する.md
+++ b/shared/game/competitive/優位性を誇示する.md
@@ -7,11 +7,12 @@
 
 実際に優位性がないと、優位性を誇示しても虚しいだけ。
 
+ただの事実が、優位性を誇示することに繋がってしまうこともある。
 劣った人にとっては優れた人の振る舞いがマウントに見えるのかもしれないけど、優れた人にとってはできて当たり前のことなので噛み合わない。
 
 「運とか他人のおかげにする」のはマウントとして受け取られるのを避けているのかも。
 幸せなことがあった話について、とくに何もフォローしないと、マウントとして受け取るサルとそうでない人がいる。
-例えば「IT業界は給料いいからね」みたいな話をした時とか。
+例えば「IT業界は給料いいからね」みたいな話をした時とか。「たまたま勉強してたことが当たりだったんだよね」みたいな。
 
 優劣自体は勝ち負けの文脈。
 優位に立とうとするのは、人間関係を勝ち負けで見ている。ゲームだと思ってる。
@@ -27,3 +28,7 @@
 わざわざ言わなくても相手が「相手の方が優位だ」と思ってしまうマウントが大事。格上感。
 
 協力すべき相手に優位性を誇示するのは知能が低いせい。
+
+男は格上か格下かの判断より前に、人かどうかの判断が入る。つまり、衝動的で、品性がない獣と、そうでない人の判断。ほとんどの女は獣側に入ってるので、格上とか格下とかの次元にいない。
+
+女性に対してオドオドしてる男でも単に女と目を合わせるとキィキィ言いながら威嚇したり荷物に手を突っ込んできたりするから目を合わせないだけで、正直女のことはバカだと思ってる。だから、女子側から格上とか格下とかって考えるのがもうおもろい。
