--- a/shared/memory/記憶に残る.md
+++ b/shared/memory/記憶に残る.md
@@ -1,9 +1,13 @@
+## 記憶に残りやすいもの
+
 特に記憶に残るのは以下の二つの方法。
 
 - 繰り返し
 - インパクト（感情が大きく動く）
 
 インパクトは難しいけど、繰り返しは誰でもできる。まずは繰り返しから。
+
+## その他
 
 感情が働かないと記憶も働きづらい。
 
@@ -22,3 +26,40 @@
 記憶に残らないものは興味がないもの。
 
 事象よりも印象の方が残りやすい。
+
+ほんの些細なことでもいいので、他の人と違うところを見せると印象に残りやすい。
+たとえば、おじぎが深すぎるとか。
+
+印象に残らないのはどんなタイプか。
+
+どうやって印象に残るか。
+
+- 顔
+- 声
+- 服
+
+印象に残るということは、記憶に残るということ。
+感情に働きかけると印象に残りやすい。
+
+さすがに「近づきたくない」と思われるのは良くない。
+異常者はインパクトすごいけど。
+
+無難すぎると印象に残りにくい。
+
+無視されるよりは浮いてるくらいでいいのかも。
+
+写真を撮られたいアピールをした方がいいのかも。
+カメラを向けられたらポーズを取るとか。
+
+アピールする。
+目立つ。
+
+印象を操作するためのポイントだけじゃなくて、具体的にどこから手をつければいいか、順序をつけたほうがいい。
+
+同じことを繰り返すのは大事。
+一貫性がないと覚えづらい。
+
+良いだけでは印象に残らない。
+すごくないといけない。
+
+価値がない人のことはぼんやりとしか覚えてないので、どこが頭悪いと思ったとか細かいことを聞かれても覚えてないしなんなら分析もしてない。
