--- a/shared/service/サービスの運営.md
+++ b/shared/service/サービスの運営.md
@@ -1,3 +1,6 @@
 サービスを長く運営・維持するためには、組織が必要。
 個人の力には限界がある。
 Organization や Corporation を参照。
+
+エンジョイ大会だからといって準備を怠ってはならない。
+むしろエンジョイ大会だからこそ、不公平感が出たりすると楽しめない。
