--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -556,3 +556,8 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 人と関わる以上は人に信頼されることを覚えた方がいい。
 
 面白いものを期待するのは愛。
+
+- 声をかけてすぐ飛んできてくれる
+- 断らない
+
+親近感は「声をかけてすぐ飛んできてくれる」に近い。距離が近い。アクセスしやすさ。利便性。
