--- a/shared/assertion/自己開示.md
+++ b/shared/assertion/自己開示.md
@@ -1,5 +1,7 @@
 自己主張
 
+自分の意見を伝えること。
+
 1. 自己認識
 2. 自己開示・自己表現
 3. 自己実現
@@ -44,3 +46,6 @@
 主張の側面もあるっちゃある。
 
 自分のことを知らない、話せないと、自己開示できない。
+
+自分が良いと思う行動を選ぶこと。
+何が良いか考えずに自分勝手に振る舞うのは自己開示とはいえない。自分の考え方が正しく反映されていない。
