--- a/shared/philosophy/history/西洋哲学史.md
+++ b/shared/philosophy/history/西洋哲学史.md
@@ -35,3 +35,5 @@
 
 - https://www.youtube.com/watch?v=P60liWVFRTE
 - https://www.youtube.com/watch?v=N9yLjHLhIgQ
+
+西洋哲学が2000年かけて発見したことも東洋哲学では2500年前に釈迦や孔子が通り過ぎている。
