--- a/shared/society/tips/不満を伝える.md
+++ b/shared/society/tips/不満を伝える.md
@@ -27,3 +27,5 @@
 
 空気を悪くする人には、不快さを態度で示さないといけない。空気を守る。
 ただ、態度で示すことによって空気が悪くなるので、自分で戻さないといけない。
+
+ネガティブなことを伝える時には「もしかしたら嫌な気持ちになるかもだけど」とか、「ダメだったら途中で止めて」とか、前置きすると相手も覚悟できる。
