--- a/shared/society/品性.md
+++ b/shared/society/品性.md
@@ -1,6 +1,6 @@
 # Elegance
 
-品格、上品さ、優雅さ、気品、社会秩序。
+品格、上品さ、優雅さ、気品、社会秩序。あるいは単に良さ。
 
 品格を構成する要素として、知性、礼儀作法、人間性、美意識、芸術性、など。
 
@@ -60,3 +60,8 @@
 姿勢、所作、言葉遣い、など美しいものに品位を感じる。
 
 品性がない人は、善性がないと思われる。
+「たぶん良い人なんだけど、ちょっと苦手」みたいな人。
+
+本当に悪意のない良い人でも、品性がないと善良とは見做されない。
+
+子どもが悪ぶろうとして品のない行動をすることがある。
