--- a/shared/game/ゲームの種類.md
+++ b/shared/game/ゲームの種類.md
@@ -1,4 +1,34 @@
+## 協力の有無
+
 大きく二つに分かれる。
 
 - 協力ゲーム: 拘束力のある合意や契約が可能
 - 対戦ゲーム: 拘束力のある合意や契約が不可能
+
+## テーマ
+
+- 版権もの
+- ファンタジー
+- スポーツ
+- ギャンブル
+
+## ジャンル
+
+- RPG
+- アクション
+  - 格闘
+  - レース
+- アドベンチャー
+  - 推理
+- シミュレーション
+- ストラテジー
+- リズム
+- パズル
+- ホラー
+- 正体隠匿
+- チキンレース
+- トリックテイキング
+- ワーカープレイスメント（ワカプレ）
+- デッキビルディング
+
+https://bodoge.hoobby.net/mechanics/1?srsltid=AfmBOoq9cMSkJtuc6YzsuDvS_5pcuJmiHQ747M7lF2aneuEXJVYTS3ve
