--- a/shared/lifestyle/clothing/服のシルエット.md
+++ b/shared/lifestyle/clothing/服のシルエット.md
@@ -27,3 +27,5 @@ Oは首、手首、足首で細さを強調する。特に足首を絞る。
 
 AはAの形の頭の部分をしっかり絞るのが大事。
 基本的には腰だけど、ワンピースのスカートなんかだと胸元の場合もある。
+
+シルエットの定型は結局しっかりシルエットを作ってる人が少ないから目立つ。A/O/Yラインの三首や腰は絞るとどうしても窮屈だし、Iラインは冬だと寒い。そもそも細いズボン自体が窮屈だし。
