--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -134,3 +134,7 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 
 若いと言うだけでもある種の期待感がある。
 老いてない、枯れてない、と言うべき。
+
+体格や姿勢が良いのは肉体的な健康を感じさせる。これはどんな家庭の子でもやるべき。
+
+上品な所作とか言葉遣いは上品な家の子がやってるから意味がある。優先順位は低い。
