--- a/shared/achievement/しなくていい苦労はしない.md
+++ b/shared/achievement/しなくていい苦労はしない.md
@@ -3,3 +3,5 @@
 苦労自体には何の価値もない。
 その人にとって何らかの意味はあるかもしれないけど。
 好きなことばっかりして他の人より稼いでるってこともザラにある。
+
+ただ、苦労になんの価値もない、という考えは、人間のかけた時間になんの価値もない、という考えでもある。情がない。
