--- a/shared/choice/value/価値観.md
+++ b/shared/choice/value/価値観.md
@@ -21,3 +21,7 @@
 評価基準は複数の階層を持って、ここまで行かないと売れないけど、ここまでいけば個人的には満足、というように区別するべきではある。
 
 人と関わる場合はお互いの価値観がずれていると長期的な関係を維持するのが難しい。
+
+価値観というのは、良いと思っているものと悪いと思っているもの。
+
+たとえば、苦労が美徳だと思っていて、苦労している人がすごい人だと思う人もいれば、苦労はただの過程でそれ自体になんの価値もないと思っている人もいる。
