--- a/shared/human/body/muscle/training/tips/腕を鍛える.md
+++ b/shared/human/body/muscle/training/tips/腕を鍛える.md
@@ -36,3 +36,6 @@
 8. ショルダータッチパイクプッシュアップ
 
 [【たった 10 回】騙されたと思って 30 日間この筋トレを試してみてください。 - YouTube](https://youtube.com/watch?v=52xzTBcO6eQ&si=stx95a5PmeSTsLeF)
+
+両手にウェイトを持って歩くファーマーズウォーク。左右に揺れずに姿勢をまっすぐ保つのがポイント。上腕も鍛えられるし、足や体幹も鍛えられる。
+https://youtube.com/shorts/i36jzroIVEI?si=l_9-Dvxu_UT1RyCW
