--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -26,3 +26,6 @@
 誰にでも下心を出すのは良くない。基本は本命だけ。
 
 好きな「タイプ」というのは何人も付き合ってわかることなので、好きなタイプが定まっている人はチャラいと思った方がいい。
+
+交際期間は恋人を選ぶ期間なので、交際相手を試すことがある。
+ただ、人を試す行動は品がなくてあまり人に好まれない。相手を選ぶだけでなく、相手も自分を選ぶかどうか見極めていることを意識しなければならない。
