--- a/shared/sex/恋の話題.md
+++ b/shared/sex/恋の話題.md
@@ -1,20 +1,31 @@
 恋バナ。
 
-- 好きなタイプは？
-- 過去に好きだった人はどんなタイプ？
-- 恋人に外せない条件は？
-- 見た目が好きな有名人は？
-- 恋人にするならどんな人か？
+- 恋しているか
+  - 気になる人はいるか
+- 誰かと交際しているか
+- 結婚しているか
+- 結婚したことがあるか
+- 恋愛するならどんな人か？
 - 結婚するならどんな人か？
-- 恋人に直してほしいところ
+  - 好きなタイプは？
+  - 外せない条件は？
+  - 過去に好きだった人はどんなタイプ？
+    - 好きになったきっかけは？
+    - 相手を選んだ決め手は？
+  - この中で選ぶなら誰か
+    - 「選べる立場じゃないから」
+- 結婚するならどんな人か？
+- 見た目が好きな有名人は？
 - もし恋人だったら嫌なところ
 - セクシーだと思う人は？
 - 男女間の友情はあると思うか
-- この中に気になる人はいるか
-  - 「選べる立場じゃないから」
 - (恋人や恋愛対象がいるなら)
   - 相手との出会いは？
+    - 好きになるきっかけは？
+    - 付き合いたいと思った決め手は？
   - 相手の好きなところは？
+  - 恋人に直してほしいところ
+- 理想のデートは？
 
 同性同士の恋バナなんかは、お互いに恋人が欲しいっていう愚痴みたいなものかも。
 恋人がいる人の惚気は仲のいい友達くらいしか聞きたくない。
