--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -2,11 +2,20 @@
 
 愛。
 
+良いところを見つけようとすること。
+
+## 愛の効用
+
 - 価値を与える
 - 影響力を高める
 - 存在感を高める
 
-良いところを見つけようとすること。
+## 愛の特徴
+
+- 愛は行為
+- 愛はポジティブなもの
+
+## その他
 
 愛とは、対象から影響を受けることに喜びを覚えること。
 
