--- a/shared/human/being/well/自己肯定感.md
+++ b/shared/human/being/well/自己肯定感.md
@@ -1,3 +1,15 @@
+何があっても「自分はここにいてもいい」という感覚。
+
+## 自己肯定感でないもの
+
+- 自分は愛されていると思う
+- 自分を好きになる
+- 自己肯定感が高まる
+- 自分には生まれてきた意味がある
+- 自分には生きている価値がある
+
+## その他
+
 自分を愛する。
 Love の文脈。
 
@@ -6,8 +18,6 @@ Love の文脈。
 ただ自分を愛するだけじゃなくて、余裕を持って周りのことも受け入れられるといい。
 
 自己肯定感を高めてくれる、というのはありえない。他人から与えられるものではない。
-
-ここにいてもいい、という感覚。
 
 自己肯定感は、他人の振る舞いをどのくらい良いように捉えるか。
 例えば道ですれ違った人が笑っていたら「楽しそうだな」と感じるのか、「笑われた」と感じるのか。
@@ -20,8 +30,6 @@ Love の文脈。
 
 自分を肯定するのに理由は要らない。
 
-自分を好きになる。
-
 自分を手放さない。
 
 意味がなくても肯定していい。愛していい。
@@ -30,3 +38,8 @@ Love の文脈。
 
 「自分は愛されている」と思うのは自己肯定感ではない。
 「誰も自分を愛さなくても自分は自分を愛しているからそれで十分」と思うのが自己肯定感。他人に期待しすぎない。
+
+自分を好きになるのも自己肯定感とは違うかも。
+別に自分が好きじゃなくてもそこにいていい。
+
+自分を好きになろうとする、自分の良いところを見つけようとするのは自己肯定感かな。
