--- a/shared/human/body/skin/肌をきれいに見せる.md
+++ b/shared/human/body/skin/肌をきれいに見せる.md
@@ -1,5 +1,6 @@
 肌をきれいに見せる。
 
+- 黒ずんだ角栓を落とす
 - メラニン色素の生成を防ぐ
   - 紫外線を避ける
     - 日焼け止めをこまめに塗る
@@ -29,3 +30,7 @@
 加齢や生活習慣の乱れが原因。
 
 https://www.kose.co.jp/kose/aging_other/other25.html
+
+鼻は鼻パックで黒ずんだ角栓を取るとそれだけでもわりときれいになる。
+
+目をこするとメラニンが反応してくまになりやすい。
