--- a/shared/lifestyle/beauty/skin/洗顔は水で.md
+++ b/shared/lifestyle/beauty/skin/洗顔は水で.md
@@ -10,3 +10,5 @@
 シャンプーにも当然界面活性剤が入っている。
 
 [肌再生の専門家が、間違った朝洗顔について解説します - YouTube](https://youtu.be/uiyex5M4kWE?si=5x6AKoiYjtQbEXX3)
+
+化粧しないなら洗顔は水でいい。汗かいたりしてもお湯で多少皮脂を落としやすくするくらいで十分。
