--- a/shared/memory/記憶.md
+++ b/shared/memory/記憶.md
@@ -57,3 +57,6 @@ https://allabout.co.jp/gm/gc/493724/
 記憶されなかったことは感じたとは言えないのかも。
 
 細かく感じないと細かく覚えられない。覚えることと感じることは深く関連している。
+
+記憶は興味よりも関心。
+「また関わることがある」から覚える。
