--- a/shared/discussion/議論.md
+++ b/shared/discussion/議論.md
@@ -1,4 +1,6 @@
-# 議論
+# Discussion
+
+議論。話し合い。
 
 複数人が集まって、いくつかの選択肢の中で一番いいものを検討する。
 
@@ -111,3 +113,5 @@ Assertion も参照。
 リーダーが引っ張っていくトップダウンの意思決定に対して、意見を出し合って決める。
 
 賄賂で意見を通してしまうと、意見が競い合わないのがだめ。
+
+誰がとは言わないけど、一般的には議論や話し合いっていうのは、お互いに作法を知らないとできない。だから、作法を知らない人との議論はみんな避ける。
