--- a/shared/sex/tips/生理的に無理.md
+++ b/shared/sex/tips/生理的に無理.md
@@ -1,3 +1,11 @@
+## 「生理的に無理」の意味
+
+「生理的に無理」とは、「抱けない」「抱かれたくない」という意味。
+
+初対面の人をヤレるかどうか=生理的に無理かどうかで見てる人というのは、性欲に支配されている。下半身で生きてる。
+
+## 特徴
+
 - 髪が汚れている
 - ひげがボサボサになっている
 - 服が汚れている
