--- a/shared/sex/恋の話題.md
+++ b/shared/sex/恋の話題.md
@@ -26,6 +26,7 @@
   - 相手の好きなところは？
   - 恋人に直してほしいところ
 - 理想のデートは？
+- 恋人を喜ばせるためにどんなことをしたいか
 
 同性同士の恋バナなんかは、お互いに恋人が欲しいっていう愚痴みたいなものかも。
 恋人がいる人の惚気は仲のいい友達くらいしか聞きたくない。
