--- a/shared/trust/creditability/信憑性.md
+++ b/shared/trust/creditability/信憑性.md
@@ -1,5 +1,40 @@
+# Creditability
+
+- 真実性
+- 正確性
+
 あるいは真実性。
 
 信憑性は客観的でなければならない。
 
 聞いたことをそのまま信じるのは良くない。自分で検証するか、誰かが検証してくれた結果の出し方を査読する。
+
+- 専門性がある
+- 根拠がある
+- 実績がある
+- 経験値がある
+
+過去に実績がある。
+
+期待感と考えるのがいいかも。
+
+実績がないことでも信じれるかどうか。
+
+本当に恩恵があるかどうか。
+
+真実は実績。
+
+実績があること。
+
+確実性との違いとして、真実性は過去のもの。過去の実績から判断する。
+確実性は予測。
+
+creditability は信頼の一部と考えられる。
+
+うさんくさい商品でも、プラシーボ効果で実際に体が良くなったりすると、その人にとっては真実になる。そこが厄介なところ。
+
+安心感に近い。
+
+情報の正確さ。
+
+ある値が目標に近いこと。
