--- a/shared/trust/intimacy/利便性.md
+++ b/shared/trust/intimacy/利便性.md
@@ -1,3 +1,16 @@
 # Convenience
 
 intimacyというのは、結局利便性のことだ。
+
+便利すぎると悪用される。
+権限設計で悪用を回避するべき。
+
+- 気楽
+- 手軽
+- 敷居が低い
+- 気兼ねしない
+- 物理的に近い
+
+物理的な距離と精神的な距離がある。
+
+近くにあって、いざという時にすぐ使えること。
