--- a/shared/trust/信頼の要素.md
+++ b/shared/trust/信頼の要素.md
@@ -1,18 +1,6 @@
-## 親近感
+- 信憑性・期待感: 実績や根拠がある
+- 利便性・親近感: 身近で頼りやすい
+- 確実性・安定感: 何度やっても同じ結果になる
 
-物理的な距離と精神的な距離がある。
-
-近くにあって、いざという時にすぐ使えること。
-
-## 確実性
-
-予測可能性。
-結果にブレがない、一貫性がある。安心感、安定感。
-
-予測しやすさのためには情報開示も重要。
-
-## 真実性
-
-過去に実績がある。
-
-期待感と考えるのがいいかも。
+確実性が高くても、結果が的外れだと意味がない。
+銃で言うと、的の真ん中に当たりつつ（信憑性）、何発打っても同じところに当たって（確実性）、反動が少ない方がいい（利便性）。
