--- a/shared/trust/reliability/確実性.md
+++ b/shared/trust/reliability/確実性.md
@@ -1,3 +1,9 @@
+# Reliability
+
+- 精密性
+- 一貫性
+- 予測可能性
+
 予測可能性、一貫性も似たようなもの。
 
 一貫した条件下で同様の結果が得られること。
@@ -9,3 +15,60 @@
 確実性が低いと信頼以前の問題。
 
 どこまで依存できるか、他の選択肢を考えなくていいか、かも。
+
+- 頼りになる
+- 結果を予測できる
+  - 期待通りに機能する
+  - 故障しない
+  - 約束を守る
+  - 何度やっても同じ結果が出る、一貫性がある
+    - ミスが少ない
+
+成果の精度。
+
+結果のばらつきがない。精密。
+
+虚と実
+
+変数の中身がわかるかどうか。
+
+変数の中身がわからないと判断できない。
+
+情報を伝える前に、虚偽かどうかは判断しないといけない。
+虚偽の知識を伝えたら嘘になってしまう。
+事実なら、早く伝えれば伝えるほどいい。詳細は後追いすればいいだけだ。
+
+また、受け取った側でも誤りチェックする必要がある。
+最初は虚偽でなくても、途中で変わってしまうこともある。
+
+言葉が嘘とか嘘じゃないとかはあまり重要でなくて、そもそも言葉は本質的に嘘だ。
+言葉は対象を 100% 表しているわけではない。
+だから、言動が一致するかも関係ない。重要なのは、その人の行動の結果が自分の都合に良いかどうか。
+
+基本的に、事実でないと誤った判断になりやすい。
+ただ、場合によっては嘘をついて正しい行動を取らせるのがリスクを下げる情報になる場合もある。
+「怪異」とか「おとぎ話」のように子どもを諌めるような説話は嘘だけど、役に立っている。
+
+まぁ、普通は事実の方がなおいいけど、事実だから良い、虚偽だからだめ、とは限らない。
+
+試したら分かることをいちいち説明する必要はない。嘘か真かは試せばいい。
+
+情報の妥当性は「どうやって検証したか」を調べたらわかる。
+検証方法が妥当ならその結果を信じるか、自分で検証してみてもいい。
+検証結果が嘘という可能性もあるので検証した方が確実だけど、手間がかかりすぎるならリスクを負うこともある。
+
+- どのくらいのサンプルを取ったか、何人を対象に調査したか
+- そのうちのどれくらいが成功したか
+
+変数の中身の変わりやすさ。
+
+過去の情報が役に立つかどうか。
+
+情報が古くなりやすい、情報が役に立たなくなりやすいのは不安定。
+
+情勢の変化によって、情報が役に立たなくなる。
+
+予測可能性。
+結果にブレがない、一貫性がある。安定感。
+
+予測しやすさのためには情報開示も重要。
