--- a/shared/trust/信頼の要素.md
+++ b/shared/trust/信頼の要素.md
@@ -1,6 +1,13 @@
-- 信憑性・期待感: 実績や根拠がある
-- 利便性・親近感: 身近で頼りやすい
-- 確実性・安定感: 何度やっても同じ結果になる
+1. 信憑性・期待感: 実績や根拠がある
+2. 確実性・安定感: 何度やっても同じ結果になる
+3. 利便性・親近感: 身近で頼りやすい
 
 確実性が高くても、結果が的外れだと意味がない。
-銃で言うと、的の真ん中に当たりつつ（信憑性）、何発打っても同じところに当たって（確実性）、反動が少ない方がいい（利便性）。
+銃で言うと、的に届いて（信憑性）、何発打っても同じところに当たって（確実性）、反動が少ない方がいい（利便性）。
+
+マシンガンみたいにとにかく数を撃つことで確実性の低さを結果的に補うとか、ぱっと見でわかりづらい状態もある。
+
+そもそも用途によって、利便性や確実性がそこまで求められないこともある。
+使う機会が少なければ押入れの奥にしまっても（利便性が低くなっても）いい、とか。
+
+身近な人の言ったことは信じるとか、奇跡を信じるとか、信頼できないものを信頼すると失敗する。
