--- a/shared/trust/信頼は相手を選ぶ.md
+++ b/shared/trust/信頼は相手を選ぶ.md
@@ -6,3 +6,6 @@
 とりあえず任せられることから任せて、信頼関係ができてきたら重要な仕事を任せる。
 
 信頼関係を築くためには相手に期待しないといけないけど、理想を押し付けるのではなくて、現実に合った期待をする。相手の得意なことに期待して、苦手なことには期待しない。
+
+信頼できない相手は警戒する。
+ただ、逆に、信頼できるのに警戒していると無駄なコストがかかっている。
