--- a/shared/science/疑問.md
+++ b/shared/science/疑問.md
@@ -15,3 +15,14 @@
 
 疑問としては悪い方向に変わる法則も考えられる。
 「どうして格闘ゲームで怒ってしまうのか」だったら、「怒る」法則も「怒らない」法則も考えられる。
+
+確信があれば、疑問がない。
+
+どういう疑問を持つかは思考より前の段階かも。
+
+Doubtもある。
+
+Wonderは仮説。「こうかなと思う」こと。
+Doubtは疑問。「こうじゃないと思う」こと。
+
+疑問を持つこと、仮説を立てること、検証すること、が科学の基礎。
