--- a/shared/trust/creditability/信用.md
+++ b/shared/trust/creditability/信用.md
@@ -134,3 +134,5 @@
 「信用ほど、積み上げるのに苦労して失う時が一瞬なんて、割の合わない投資はない」『うみねこのなく頃に』
 
 『水属性の魔法使い』で「都市の食料を全て買い占めた」って描写が出てきたけど、商売というのは単に金を積めば成立するものでもない。いきなり誰かが買い占めるということは、元々の売り先に対して信用を失うということでもある。
+
+期待に応え続けることで信用になる。「次もいいだろう」と言う期待。
