--- a/shared/learning/疑問を持つ.md
+++ b/shared/learning/疑問を持つ.md
@@ -21,3 +21,8 @@
 
 「どうして」を考えるときに、足りないものを数えても意味がない。
 重要なのは、成功したパターンで何があったか。
+
+仮定してるけど、本当は不確かなことを疑う。
+例えば、成人男性と子供が一緒に遊んでいても親子ではないかもしれない。一見確からしいことも疑ってみる。
+
+一見確からしいことを疑うには、まず事象と印象を分けて、事象をよく見てみる。第一印象以外にも想定できることに気づくかもしれない。
