--- a/shared/people/人柄.md
+++ b/shared/people/人柄.md
@@ -17,6 +17,12 @@
       - どれがいいと思うか
     - どう感じたか
   - 経験
+  - 刺激を求めるか、避けるか
+  - 休息
+    - どうなると疲れるか
+    - どうなると疲れが取れるか
+      - 人に会うと気が晴れるか
+      - 一人でいると気が晴れるか
 
 客観的なことばかりではなく、主観を問うことで人柄を知る。
 
@@ -50,3 +56,5 @@
 
 人格、人柄には考え方と感じ方が含まれるため、意見や感覚を否定するのは当然人格を否定している。
 考え方や感じ方を否定されて人格を否定されたと思わないのなら、それは自分の意見ではないということだ。科学分野からの引用とか。
+
+人柄というと性格も含めてもっと広いところ。
