--- a/shared/science/疑問.md
+++ b/shared/science/疑問.md
@@ -26,3 +26,24 @@ Wonderは仮説。「こうかなと思う」こと。
 Doubtは疑問。「こうじゃないと思う」こと。
 
 疑問を持つこと、仮説を立てること、検証すること、が科学の基礎。
+
+- 状況
+  - いつ
+  - どこで
+  - 誰と
+- 状態
+  - どうなっている
+- 過程
+  - 何があった
+  - 何をした
+  - どうして
+  - どうやって
+- 数量
+  - いくつ
+  - いくら
+- 展望
+  - どうする
+  - どうしたい
+  - どうなりたい
+
+そこまで確かさを絞る必要があるかどうか。
