--- a/shared/trust/期待.md
+++ b/shared/trust/期待.md
@@ -73,3 +73,6 @@ UIに不満を感じたら、何かが「期待通りに動いていない」と
 期待はするけど良い結果にならなくてもべつにいい、というのは信頼してるのかしてないのか。
 
 期待してもいいけど、期待した結果が出なかったら単に運がなかった、と思うだけでいい。もちろんコストがかかっているなら費用対効果を考えるべきではあるが、期待しない、というのは間違い。
+
+他人は財布を盗まない、と思っていても、一応財布は常に身につけておくことでそもそも鞄を置きっぱなしでも盗まれる余地がない。
+期待することと、そもそも問題が起きないように備えることは分けて考える。
