--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -173,3 +173,5 @@ loveもworkも利害関係は別で、careにあるのかも。
 関心がベース。関心がないと思いやりもない。
 
 慈悲はcareかも。自分より劣った存在に対して世話をする。
+
+個人的には葬式の時はいちいち実家に帰らなくていいと思ってたんだけど、遺族に共感して寄り添うのが大事なのかも。死んだ人にはもう会えないからいつでも供養できるけど、遺族はまだ感情が残っている。故人との関係だけじゃない。
