--- a/shared/care/attention/tips/関心を持つ.md
+++ b/shared/care/attention/tips/関心を持つ.md
@@ -61,3 +61,6 @@ LoveよりもCareが先。注意して見る。
 注意には、動きを予測する、先読みするのも含まれる。
 
 誰にでも関心を持って態度を変えないのは難しい。難しいからこそ価値がある面もある。
+
+信頼することで、関心が薄れるというか、気を抜くこともある。気を抜けるのが友人。
+完全に任せっきりだからこそ目を離す。
