--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -233,3 +233,12 @@
 
 全く気を遣わない、家族みたいな感覚になるといい。
 ただ、どちらかというと家族が友人のようになる、と考えてもいいかも。家族は運命共同体。公共の文脈。友人には利害関係があるとは限らない。
+
+友人には信頼が必要。
+信頼できない人は気が抜けない。
+
+家族や恋人とは友人のような関係が理想。気を遣わない。
+なんなら職場の人とも友人のような関係になれるのが一番いい。変に馴れ合う必要はないけど、気遣いは減らせるようにする。心理的安全性。
+人と接するコストを下げるのは大事。
+
+雑に扱っても、害を与えてはいけない。
