--- a/shared/people/人の要素.md
+++ b/shared/people/人の要素.md
@@ -11,6 +11,9 @@
 ## 少しプライベートなこと
 
 - 趣味
+- 娯楽
+- ライフスタイル
+  - 休日の過ごし方
 - 特技
 - 容姿
 - 能力
@@ -63,6 +66,21 @@
 - 経験
 - 意図
 - 習慣や癖
+- 展望
+  - やりたいこと
+    - 行きたいところ
+    - 頑張っていること
+    - ハマっていること
+- 過去
+  - 学歴
+  - 職歴
+  - 恋愛遍歴
+- 関係
+  - 家族
+  - 友人
+  - 恋人や交際相手
+  - 上司や同僚
+  - 学校やサークル
 
 人の情報を得ることは、予測可能性や信頼性につながる。
 
