--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -29,3 +29,13 @@
 
 交際期間は恋人を選ぶ期間なので、交際相手を試すことがある。
 ただ、人を試す行動は品がなくてあまり人に好まれない。相手を選ぶだけでなく、相手も自分を選ぶかどうか見極めていることを意識しなければならない。
+
+交際した結果として、恋人には選ばなかった、選ばれなかった、ということもある。
+
+- 性格や価値観
+  - 子どもは何人欲しいか
+- セックスの相性
+  - セックスの頻度
+
+体の相性で大きいのは、セックスの頻度。
+片方がセックスしたいのにもう一方がそうでないなら、外に恋人を作ることもある。
