--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -129,3 +129,10 @@
 「振られたらもう関係を続けられない」と思って動かないのは覚悟が足りない。
 
 恋人は恋愛のゴールであって、恋愛している間はまだ恋人ではない。
+
+子供を産めない年齢になればどうあっても恋人ではなくなる。
+恋人でなくなっても家族や友人として付き合っていける人と恋人になるのが理想。
+
+セックスレスも恋人ではなくなったということ。
+
+恋人ではなくなったからといって、必ずしも相手を捨てなくていい。
