--- a/shared/trust/creditability/信憑性.md
+++ b/shared/trust/creditability/信憑性.md
@@ -38,3 +38,11 @@ creditability は信頼の一部と考えられる。
 情報の正確さ。
 
 ある値が目標に近いこと。
+
+信憑性は過程を見ないとわからない部分もある。
+結果は良くても、報告を誤魔化していることがある。
+
+確実性が高すぎたら、信憑性を疑った方がいいかも。
+成績が良すぎるから一旦ドーピングを疑うみたいな。
+
+信憑性は不正しやすい。
