--- a/shared/trust/reliability/確実性.md
+++ b/shared/trust/reliability/確実性.md
@@ -74,3 +74,5 @@
 予測しやすさのためには情報開示も重要。
 
 普段は優しいけど暴力を振るったり暴言を吐いたりする人は確実性が低いし、そもそも害があるので警戒の対象であるべき。信頼してはいけない。
+
+可用性 (availability) は、必要な時に停止しないこと。稼働率。
