--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -561,3 +561,12 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 - 断らない
 
 親近感は「声をかけてすぐ飛んできてくれる」に近い。距離が近い。アクセスしやすさ。利便性。
+
+信頼することで、セキュリティを省略できる。
+逆に、セキュリティがあれば、そもそも信頼する必要がない。ゼロトラスト。Verify and never trust.
+
+信頼するのはコストを下げるのと、恩恵を受けるため。
+
+警戒すべき対象を信頼してもリスクが上がるだけ。
+
+人間相手の場合は、相手を信頼してないと信頼されないこともある。
