--- a/shared/trust/恩恵.md
+++ b/shared/trust/恩恵.md
@@ -42,3 +42,8 @@
 恩恵は成功体験。
 
 小さな恩恵があれば、信頼につながる。これは他人じゃなくても。勉強するときとかも。小さな成功体験。
+
+安心できて、恩恵があれば、一緒にいたいと思う。
+安心感と期待感。
+
+警戒されつつ、期待もされることがある。トランプ大統領みたいな。注意して利用する。
