--- a/shared/computer/software/engineering/障害.md
+++ b/shared/computer/software/engineering/障害.md
@@ -7,3 +7,5 @@
 不具合や障害が起きても、要望通りなら欠陥ではない。
 
 外部サービスに依存しているサービスの障害対応では、外部サービスが落ちたりエラーが出たりしてないか調べると大きく切り分けられる。
+
+耐障害性、フォルトトレランスは、障害が発生しても機能を維持して運用を継続する仕組み。
