--- a/shared/sex/dating/恋愛経験.md
+++ b/shared/sex/dating/恋愛経験.md
@@ -1,3 +1,5 @@
 恋愛経験がないように見えると恋人として信頼しにくい。怪しまれやすい。特に歳をとると。
 
 結婚して子供を育ててない人は、どれだけ交際した人数が多くても一度もゴールに至ってない人。恋愛経験豊富とは言えない。通算ゴール0本のストライカー。ゴール前でドリブルしてるだけ。
+
+お店の女性以外とセックスしたことがない人は素人童貞と呼ぶけど、恋人と子供を作るつもりでセックスしたことがない人は恋人童貞とでも呼ぶべきか。
