--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -175,3 +175,11 @@ loveもworkも利害関係は別で、careにあるのかも。
 慈悲はcareかも。自分より劣った存在に対して世話をする。
 
 個人的には葬式の時はいちいち実家に帰らなくていいと思ってたんだけど、遺族に共感して寄り添うのが大事なのかも。死んだ人にはもう会えないからいつでも供養できるけど、遺族はまだ感情が残っている。故人との関係だけじゃない。
+
+情は有限。
+大切な人たちにより多くのリソースを割くべき。
+
+関心というのは一度に一つの時が一番よく見えている。
+複数のことに関心を向けようとすると、一つ一つの割合は減っていく。
+
+八方美人は誰に対しても関心が薄いからこそ成立する。
