--- a/shared/popular/tips/女性にモテたい.md
+++ b/shared/popular/tips/女性にモテたい.md
@@ -35,3 +35,5 @@ https://x.com/prada_46/status/1811005372855108064
 女性は出産にリスクがあるので当然。
 
 男性は女性をちょっと怖がらせるくらいの方が強さを演出できて舐められないのかもしれない。
+
+女性にばっかりモテようとしている人は余裕がないようにも見える。
