--- a/shared/sex/dating/交際相手.md
+++ b/shared/sex/dating/交際相手.md
@@ -1,2 +1,4 @@
 交際相手は恋人じゃないので、相手の行動を制限する権限はない。まぁ、相手が潔癖で相手から捨てられることはあるけど。だから俺は通常1人ずつ交際するつもりだけど、それを相手に求めない。
 恋人に関しては単純にDNA検査を義務付けるべきだと思ってる。
+
+恋愛や交際の間は恋人じゃなくて交際相手。
