--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -39,3 +39,14 @@
 
 体の相性で大きいのは、セックスの頻度。
 片方がセックスしたいのにもう一方がそうでないなら、外に恋人を作ることもある。
+
+交際しているからといって、そのまま恋人になるとは限らない。
+むしろ恋愛が恋人を選ぶ過程と考えると、選ばれない、選ばないことの方が多いはず。
+振ったり振られたりしても挫けない。
+
+人間にそう大きな違いはないので、選り好みしすぎるのもよくない。
+
+交際期間が長くなったら選ばれなかったと判断した方がいい。
+恋は最大でも2年くらいで覚めるので、1-2年くらいが目安。
+
+相手と恋人になるかどうか見極める期間。
