--- a/shared/sex/dating/恋愛経験.md
+++ b/shared/sex/dating/恋愛経験.md
@@ -3,3 +3,8 @@
 結婚して子供を育ててない人は、どれだけ交際した人数が多くても一度もゴールに至ってない人。恋愛経験豊富とは言えない。通算ゴール0本のストライカー。ゴール前でドリブルしてるだけ。
 
 お店の女性以外とセックスしたことがない人は素人童貞と呼ぶけど、恋人と子供を作るつもりでセックスしたことがない人は恋人童貞とでも呼ぶべきか。
+
+恋愛経験で重要なのは、最終的に良い人を選んで、良い人に選ばれること。
+恋愛は恋人になるまでの過程でしかない。
+
+何度も結婚に至っては離婚している人は恋愛経験が豊富と言えるけど、経験の割に上手くなってないとも言える。経験があるからといって実力があるかどうかは別。良い人と恋人になれてない。
