--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -136,3 +136,9 @@
 セックスレスも恋人ではなくなったということ。
 
 恋人ではなくなったからといって、必ずしも相手を捨てなくていい。
+
+交際中にセックスしていてたまたま子どもが生まれるのは、恋人というより交際中の事故。
+まぁ、責任をとって恋人になる場合もある。
+
+現代社会で恋人と配偶者はほぼ同じ。
+結婚してないと社会的には交際相手と見做される。
