--- a/shared/wealth/福祉.md
+++ b/shared/wealth/福祉.md
@@ -50,3 +50,8 @@ Wealth は福利や福祉の意味がある。
 政府の福祉は国の安定のために仕方なくやっていることで、本来の福祉は自ら進んで手に入れるもの。家族や友人を普段から助けておいて、自分が困ったら助けてもらう。お金を貯めておいて、いきなり仕事がなくなってもしばらく生きられるようにしておく。
 
 福祉が当たり前のものだと考えてはいけない。
+
+福祉は社会的な財産。
+いざという時に助けてくれる友人や家族の存在。
+引っ越しを手伝ってくれるとか、風邪のときに食糧や薬を買ってきてくれるとか、小さなことでいい。近所だと楽。
+「いざという時に助けてくれる」にも幅がある。
