--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -274,3 +274,25 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 優れたところを見せたいなら、肩書きや実績を誇るよりもユーモアを見せる。
 
 失敗を笑い話にしたり、コンプレックスを個性にしたり、ネガティブなことをポジティブに捉えるのがベースにあるかも。
+
+社長が飲み会に来て緊張感があったら誰かが場を和ませないといけない。いきなり社長が裸踊りしたりすると安心というよりもはしゃぎすぎてる感じになる。笑っていいかもわからん。一人一人に気さくに話しかけたりして地道に和ませるとか、開始の挨拶で笑いを取るとか、うまいこと和ませるとユーモアがある。
+
+ユーモアは場を和ませる。
+
+気配りや気遣いがユーモアの基礎。独りよがりな個性や自分勝手をユーモアとは言わない。
+
+ユーモアがなんらかの緊張状態を緩和することで笑いが起きることもある。でも笑いは副作用で、緊張の緩和の方が目的。
+
+ユーモアは相手に安心感を与えるものであるべき。
+
+自分と他人はお互いが根本的に異物。それを「なじませる」のがユーモア。警戒や恐れじゃなく、安心や笑いを与える。
+
+個性が合理的でない場合もある。人を食うのが食事のこだわりとか、社会的に認められないこともある。
+
+自分のこだわりが個性になる。こだわりを大事にする。
+
+笑顔というのは元々威嚇の表情。チンパンジーが歯を剥き出しにするのと同じ。無意味に歯を見せて笑うと警戒されることがある。
+
+趣や興もユーモア。個性があることで、興味をひく。でも安心感があれば楽しい。怖がられてしまうと良くない。
+
+世間一般から外れたものはそもそも受け入れられにくいという問題がある。そこを洗練された品の良さで補う必要がある。ユーモアは上品。文化によっても変わる。
