--- a/shared/lifestyle/clothing/おしゃれ.md
+++ b/shared/lifestyle/clothing/おしゃれ.md
@@ -3,3 +3,12 @@
 1. まずは白黒
 2. シルエットを4つの類型のどれかに合わせる
 3. アクセサリーをひとつだけ身につける
+
+おしゃれはファッションというよりもユーモアの問題。
+
+おしゃれの定義は、俗気がない、大衆的でないことと、気が利いていること。
+気が利くというのは興を添える、趣を添えること。楽しさやおかしさがある。
+ユーモアの概念が近いか。
+
+おしゃれはまず「合ってる」ことが大事。その上で「外し」の概念がある。
+特に季節、年齢、性別、などに合ってないと違和感が大きすぎて服どころじゃない。悪目立ちのパターン。
