--- a/shared/discussion/議論の前提.md
+++ b/shared/discussion/議論の前提.md
@@ -1,5 +1,7 @@
-- 持論
-- 落としどころ
+- 持論を持つ
+- どこまで譲歩できるか考えておく
+- 持論を言葉にする
+- 他者の意見を否定しない（競合することはある）
 
 持論がない人間は会議に参加する価値がない。
 
@@ -8,3 +10,5 @@
 また、落とし所は採決者、主に上司にも確認しておくとスムーズ。
 
 議論する時はまず全員が相手の意見を肯定するところから始める。どれも良いことを認めつつ、一番を決める。
+
+議論するなら、論理を組み立てて言葉にしないといけない。
