--- a/shared/humor/おしゃれ.md
+++ b/shared/humor/おしゃれ.md
@@ -12,3 +12,6 @@
 
 おしゃれはまず「合ってる」ことが大事。その上で「外し」の概念がある。
 特に季節、年齢、性別、などに合ってないと違和感が大きすぎて服どころじゃない。悪目立ちのパターン。
+
+おしゃれになりたいならトレンドを追うのは遅い。
+トレンドを作る。周りを観察して、むしろトレンドが大衆化する頃には別の方に向かう。結果的に流行に合っているように見える。
