--- a/shared/lifestyle/clothing/着こなし.md
+++ b/shared/lifestyle/clothing/着こなし.md
@@ -7,3 +7,9 @@ WEAR や ZOZOTOWN で着こなしを観察するのもいい。
 冬に夏の格好とか、リラックスする場所にスーツとか、間違っていると変。
 
 特定の目的の服装としてはoutfitも使う。服装そのもの。特に一揃えの服。セットアップ。
+
+大衆向けのブランドでもアイテム単位で見れば大衆向けだけど、組み合わせによっては全然おしゃれに見える。
+
+まず、服はアイテム単位で見ない。シルエットが先。
+
+自分の顔や体格に似合うかどうかを判断できるほうがいい。
