--- a/shared/communication/media/language/languages/english/英語の学習.md
+++ b/shared/communication/media/language/languages/english/英語の学習.md
@@ -13,3 +13,8 @@ https://youtube.com/watch?v=PB1Mwr6c64w&si=r-aLbp3YdRgQp_KE
 
 タイピングゲーム。
 https://www.e-typing.ne.jp/english/
+
+頻出英単語ランキング
+https://gogakunekoblog.com/english-most-common-words-1000/
+一般名詞で特によく使われるのはtime, people, wayあたり。
+一般動詞だとsay, make, take, comeあたり。
