--- a/shared/game/ゲームのジャンル.md
+++ b/shared/game/ゲームのジャンル.md
@@ -1,16 +1,18 @@
-- ロールプレイング
+- RPG
+  - シミュレーションRPG
+  - テーブルトークRPG
 - アクション
 - アドベンチャー
 - シミュレーション
-- ストラテジー
-- スポーツ
-- レース
+  - 戦争（ストラテジー）
+  - 格闘
+  - 恋愛
+  - スポーツ
+  - レース
+  - 推理
+  - ギャンブル
 - リズム
 - ホラー
-- 格闘
-- 推理
-- ギャンブル
-
 - 正体隠匿
 - チキンレース
 - トリックテイキング
@@ -18,3 +20,16 @@
 - デッキビルディング
 
 https://bodoge.hoobby.net/mechanics/1?srsltid=AfmBOoq9cMSkJtuc6YzsuDvS_5pcuJmiHQ747M7lF2aneuEXJVYTS3ve
+
+シミュレーションゲームは模するものによってさらに細かいジャンルがある。
+戦争や恋愛のほか、レースや格闘もある意味でシミュレーションと言えるかも。
+
+駒と盤面を使ったゲームは戦争シミュレーションゲーム。
+ファイアーエムブレム
+スパロボ
+うたわれるもの
+ディスガイア
+FFタクティクス
+タクティクスオウガ
+サモンナイト
+など。
