--- a/shared/human/body/skin/肌をきれいに見せる.md
+++ b/shared/human/body/skin/肌をきれいに見せる.md
@@ -34,3 +34,5 @@ https://www.kose.co.jp/kose/aging_other/other25.html
 鼻は鼻パックで黒ずんだ角栓を取るとそれだけでもわりときれいになる。
 
 目をこするとメラニンが反応してくまになりやすい。
+
+毛穴が日焼けして茶色い斑点になるのは角栓をとっても意味がない。ホワイトニングが必要。
