--- a/shared/lifestyle/clothing/着こなし.md
+++ b/shared/lifestyle/clothing/着こなし.md
@@ -13,3 +13,11 @@ WEAR や ZOZOTOWN で着こなしを観察するのもいい。
 まず、服はアイテム単位で見ない。シルエットが先。
 
 自分の顔や体格に似合うかどうかを判断できるほうがいい。
+
+顔が良いほど服を邪魔しない。
+
+まずは無地のシャツを中心に服を決める練習がおしゃれの基礎。
+
+無地のシャツはのっぺりしやすいので、アクセサリーとかでアクセントをつけるといい。
+
+無地のシャツに合わないパンツは基本的に難しいパンツ。
